--- a/mainpage.html
+++ b/mainpage.html
@@ -14,7 +14,7 @@
       <div class="gradient-header p-2">
        <div class="row">
         <div class="col-3 logo-name " >
-            <div><img src="/Images/osa-logo-wbg.png" height="50" class="rounded-circle"></div>
+            <div><img src="Images/osa-logo-wbg.png" height="50" class="rounded-circle"></div>
             <div class="sitename">OSA</div>      
         </div>
              <div class="col-9"></div>
@@ -28,7 +28,7 @@
       <div class="container-fluide p-5">
           <div class="row">
                <div class="col-1">
-                 <img src="/Images/CU.png" class="rounded" height="100">
+                 <img src="Images/CU.png" class="rounded" height="100">
                </div>
              <div class="col-10" >
                  <div class="container text-center ">
@@ -44,21 +44,21 @@
        <!--End of main head part-->
        <!--Start of the part of body to change in diff paes-->
        <div>
-            <div class="btn-container">
+            <div class="bttn-container">
                 <div class="row">
                     <div class="col-6">
-                          <button type="submit" class="btn"> Student</button>
+                          <button type="submit" class="bttn"> Student</button>
                     </div>
                     <div class="col-6">
-                          <button type="submit" class="btn"> Professor</button>
+                          <button type="submit" class="bttn"> Professor</button>
                     </div>
                  </div>                
                 <div class="row">
                   <div class="col-6">
-                    <button type="submit" class="btn"> Administrator</button>
+                    <button type="submit" class="bttn"> Administrator</button>
                   </div>
                  <div class="col-6">
-                  <button type="submit" class="btn"> Coordinator</button>
+                  <button type="submit" class="bttn"> Coordinator</button>
                  </div>
                 </div>
             </div>
